<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="@string/intro"
        android:textSize="20sp" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/intro1"
        android:textSize="16sp" />
    
    <Button 
        android:id="@+id/btnGetTrainNo"
        android:text="@string/btnGetTrainNoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp" />
    
    <Button 
        android:id="@+id/btnPnrStatus"
        android:text="@string/btnPnrStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp" />
        
    <Button 
        android:id="@+id/btnTrainTrack"
        android:text="@string/btnTrackTrainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:visibility="visible" />
        
</LinearLayout>